Fix contributors page display on mobile devices (#124)

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -32,7 +32,7 @@ body {
   margin: 0 auto; 
   float: none; 
   margin-bottom: 10px; 
-  width: 400px;
+  max-width: 400px;
   text-align: center;
 }
 .jumbotron {
